# ace-gb

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  configure.sh  default-imgui.ini  vcpkg.json
cmake/: imgui.cmake  nfd.cmake  rlimgui.cmake
resources/roms/: demo-gb.gb  demo-gbc.gbc
resources/shaders/: noop.glsl
resources/shaders/100/: noop.glsl  scanlines.glsl
resources/shaders/330/: scanlines.glsl
src/: applog.cpp  applog.hpp  args.cpp  args.h  args.hpp  assembly_viewer.cpp  assembly_viewer.hpp  audio.cpp  audio.h  audio.hpp  audio_channel.h  audio_channel.hpp  boot_rom_device.cpp  boot_rom_device.h  boot_rom_device.hpp  cart_device.cpp  cart_device.h  cart_device.hpp  cart_header.h  cart_header.hpp  cart_info.h  cart_info.hpp  config.h  config.hpp  cpu.cpp  cpu.h  cpu.hpp  cpu_state.hpp  decoder.cpp  decoder.h  decoder.hpp  emulation_mode.hpp  emulator.cpp  emulator.h  emulator.hpp  error_messages.cpp  error_messages.hpp  file.cpp  file.h  file.hpp  (+84 more)
web/: shell.html
